Add unleashed builds

--- a/.github/build.yml
+++ b/.github/build.yml
@@ -18,6 +18,12 @@ jobs:
             sdk-channel: dev
           - name: release channel
             sdk-channel: release
+          - name: Unleashed dev
+            sdk-index-url: https://up.unleashedflip.com/directory.json
+            sdk-channel: dev
+          - name: Unleashed release
+            sdk-index-url: https://up.unleashedflip.com/directory.json
+            sdk-channel: release
     name: 'ufbt: Build for ${{ matrix.name }}'
     steps:
       - name: Checkout
