--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Build with ufbt
         uses: flipperdevices/flipperzero-ufbt-action@v0.1.3
         id: build-app
