--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,12 @@ jobs:
           - name: Unleashed release
             sdk-index-url: https://up.unleashedflip.com/directory.json
             sdk-channel: release
+          - name: Momentum dev
+            sdk-index-url: https://up.momentum-fw.dev/firmware
+            sdk-channel: dev
+          - name: Momentum release
+            sdk-index-url: https://up.momentum-fw.dev/firmware
+            sdk-channel: release
     name: 'ufbt: Build for ${{ matrix.name }}'
     steps:
       - name: Checkout
